Version 1.0.64 :
- Added "Force Inactive Flag" attribute to Drone Gates and Flag Dash Switches
- Added "Cell Offset X" and "Cell Offset Y" attributes to Cell Locks
- Added ""Animation Speed", Particles Color", "Light Color", "Wiggle", "Loop Sound", "Loop Burst" and "Static Time" attributes to Custom Collectable
- Added "Hide On World Map" attribute to In-game Map Hint Controllers
- Break Blocks Indicators now also apear if the player touch them in the Dash Attacking state. This make it more lenient to reveal the indicator in cases where the player dash end just before the block
- Golden strawberries in campaigns using a Merge Chapter Controller now reset the current timer to 0 when grabbed, and restore it back (+ the time spent with the berry) on death or berry collection
- Golden strawberries in campaigns using a Merge Chapter Controller now reset entities that should not reload anymore when grabbed, and resture them back (+ any new entity that got added with the berry) on death or berry collection
- Achievements popups in Secret of Celeste Mountain can no longer appear while the player is in dummy state or for the first 0.1s after entering a room, to prevent them appearing while the player is teleported
- Arrows on the warp menu disapear correctly when there is more than 10 warps in the menu and the player select the "Stay Here" option
- If the player die after using the Remote drone but before the drone can be controlled, the player will now respawn at their current spawn point to prevent an infitire respawn softlock
- The Remote Drone can no longer be deployed by pressing down while holding it. Madeline will now attempt to throw it instead
- Bag and Misc upgrades now only tell the player to select the upgrade to use it if the player already have another upgrade using the same slot
- Campaigns using a Merge Chapters Controller now always display the total amount of strawberries in a chapter on the journal once the player entred the chapter at least once